# mobile-ui-rl-env

./: AI_USAGE.md  Dockerfile  README.md  pyproject.toml  run_eval.py  run_eval_output.txt
mobile_ui_env/: __init__.py  actions.py  dataset.py  env.py  rubric.py  state.py
tests/: __init__.py  test_actions.py  test_env.py  test_rewards.py
