[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobile-ui-env"
version = "0.1.0"
description = "A Python RL environment for mobile UI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest",
]

[project.optional-dependencies]
verifiers = [
    "verifiers",
]

[project.scripts]
run-eval = "mobile_ui_env.run_eval:main"

[tool.hatch.build.targets.wheel]
packages = ["mobile_ui_env"]
